# Dean

./: .gitignore  LangChain_LangGraph_Guide.md  README백프론트 연동 (1).md
0115/cli_nod/: package-lock.json  package.json
0115/cli_pyth/: main.py  pyproject.toml
0126/: main.py  pyproject.toml
0126/configs/: db.py
0126/controller/: board.py  root.py  user.py
0127/: main.py  pyproject.toml
0129/back/: main.py  pyproject.toml
0129/front/: package-lock.json  (+1 more)
0130/: main.md
0202/: docker.md
02062/: README백프론트 연동 (1).md
0209/: README백프론트 연동 (1).md
0210(2)/: README백프론트 연동 (1).md
0210(3)/: README백프론트 연동 (1).md  dockerfile
gravity/: antigravity.config.json  index.html  script.js  style.css  test_local_ollama.js
practice/: docker-compose.yaml
practice/app/: main.py  pyproject.toml  settings.py  수정전.md
practice/app/src/: step03.py
prompt-board/: database.js  package-lock.json  package.json  server.js  server.py
study21/: docker.md  main.py
study30/: dockerfile  main.py  pyproject.toml  read.md  settings.py
study31/: README백프론트 연동 (1).md
study32/: back.md  board_edit.md  board_view.md  front.md
study33/: auth.py
study33(2)/Mini-test/backend1/: .gitignore  board.py  home.py  main.py  pyproject.toml  settings.py  upload.py  user.py
study34/: Dockerfile.Root  authorized_keys.pub
study38/: compose.yml
study39/: app1-config.yaml  app1-deployment.yaml  app1-service.yaml  app2-config.yaml  app2-service.yaml  mariadb-my-config.yaml  mariadb-pod.yaml  mariadb-pv.yaml  mariadb-pvc.yaml  nginx-pod.yaml  pvc-pod.yaml  redis-pod.yaml  redis-service.yaml  vol-pod.yaml  vol-pv.yaml
study40/: README.md
study42/: db.py  main.py  pyproject.toml
study42/pages/: df.md  page1.py  page2.py  page3.py  page4.py  page5.py  page6.py
study43/: pyproject.toml
study44/: gemini.md  main.py  pyproject.toml
study46/: compose.yml  readme.md
study48/: compose.yml
study49/: compose.yml  main.py  pyproject.toml  readme.md
study49(2)/app1/: main.py  pyproject.toml
study50/: readme.md
study53/: README.md
study54/: README.md
study57/: README.md
study59/app/: main.py  pyproject.toml
study59/app/src/: step01.py  step02.py  step03.py  step04.py
study60/app/: main.py  pyproject.toml  settings.py
study60/app/src/: core.py  step01.py  step02.py  step03(wrong).py  step03.py  step04.py  step05.py  step06.py
study61/: README.md
새 폴더/: Nav.jsx
(+371 files in other folders)
