[project]
name = "study42"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "streamlit>=1.55.0",
    "trafilatura>=2.0.0",
    "vega-datasets>=0.9.0",
]


