[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.6",
    "langgraph-swarm>=0.1.0",
    "pydantic-settings>=2.13.1",
]
