[project]
name = "app1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mysql-connector-python>=9.6.0",
    "pandas>=3.0.1",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "pyspark>=4.1.1",
    "sqlalchemy>=2.0.48",
]
